# CLI

./: .clang-format  CMakeLists.txt  README.md
include/fluent/cli/: app.h  args.h  value.h
include/zelix/cli/: app.h  args.h  value.h
